Fix button color on safari

--- a/static/main.css
+++ b/static/main.css
@@ -557,6 +557,7 @@ body {
   text-decoration-style: dotted;
   font-family: inherit;
   font-variant: inherit;
+  color: inherit;
 }
 .button:hover {
   text-decoration-style: solid;
